# dumbo_scripts

./: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: export_ft_compensated_matlab  export_ft_matlab.sh  export_ft_raw_matlab  export_joint_pos_matlab  export_joint_pos_matlab.sh  export_joint_vel_command_matlab  export_joint_vel_command_matlab.sh  plot_force.sh  plot_force_compensated.sh  plot_force_drift_compensated.sh  plot_torque.sh  plot_torque_compensated.sh  plot_torque_gravity_compensated.sh
scripts/commands/: gripper.py  move_joint_pos.py  parallel_gripper_vel_control.py
scripts/export_matlab/: export_ft_drift_compensated_matlab  export_ft_gravity_compensated_matlab  export_joint_pos_matlab
scripts/plot/: plot_force_gravity_compensated.sh  plot_joint_pos.sh  plot_joint_vel_command.sh  plot_torque_drift_compensated.sh
